# TradeMarkFlow-EU

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
app/agents/: __init__.py  agents.py
app/models/: schema.py
app/pipeline/: euipo_bulletin_spider.py  ingest_euipo.py  parse_oa.py
app/services/: embeddings.py
app/tools/: lancedb_tools.py
data/pdfs/: latest_oa.md
legal_corpus/: eutmr_sample.txt
tests/: test_e2e_clearance.py
